generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
}

model Booking {
  description   String?         @db.VarChar(255)
  status        String          @db.VarChar(10)
  date          DateTime        @db.Date
  id            String          @id @default(uuid()) @db.Uuid
  user_id       String          @db.Uuid
  itinerary_id  String?         @db.Uuid
  type          String          @default("personal") @db.VarChar(20)
  itinerary     Itinerary?      @relation(fields: [itinerary_id], references: [id])
  user          User            @relation(fields: [user_id], references: [id])
  items         BookingItem[]
  members       BookingMember[]
}

model BookingItem {
  id           String    @id @default(uuid()) @db.Uuid
  itinerary_id String    @db.Uuid
  booking_id   String    @db.Uuid
  booking      Booking   @relation(fields: [booking_id], references: [id])
  itinerary    Itinerary @relation(fields: [itinerary_id], references: [id])

  @@unique([booking_id, itinerary_id])
}

model BookingMember {
  id         String  @id @default(uuid()) @db.Uuid
  booking_id String  @db.Uuid
  name       String  @db.VarChar(255)
  email      String? @db.VarChar(255)
  phone      String? @db.VarChar(50)
  booking    Booking @relation(fields: [booking_id], references: [id], onDelete: Cascade)
}

model Company {
  // Basic Info
  id                    String          @id @default(uuid()) @db.Uuid
  name                  String          @db.VarChar(100)
  tagline               String?         @db.VarChar(150)
  description           String?         @db.VarChar(2000)
  
  // Visual Branding
  logo_url              String?         @db.VarChar(500)
  cover_image_url       String?         @db.VarChar(500)
  
  // Location
  address               String?         @db.VarChar(500)
  city                  String?         @db.VarChar(100)
  country               String?         @db.VarChar(100)
  
  // Contact Information
  email                 String?         @db.VarChar(255)
  phone                 String?         @db.VarChar(50)
  contact               String?         @db.VarChar(50)  // Keep for backward compatibility
  
  // Business Details
  specializations       Json?           // Array of specialization strings
  languages             Json?           // Array of language codes
  
  // Operational
  operating_days        String?         @db.VarChar(200)
  operating_hours       String?         @db.VarChar(200)
  
  // Online Presence
  website               String?         @db.VarChar(255)
  facebook_url          String?         @db.VarChar(255)
  instagram_url         String?         @db.VarChar(255)
  twitter_url           String?         @db.VarChar(255)
  
  // Additional Info
  insurance_info        String?         @db.VarChar(500)
  emergency_phone       String?         @db.VarChar(50)
  supporting_docs       Json?           // Array of document URLs from Cloudinary
  
  // Timestamps
  created_at            DateTime        @default(now())
  updated_at            DateTime        @updatedAt
  
  // Relations
  owner_id              String          @db.Uuid
  owner                 User            @relation(fields: [owner_id], references: [id])
  itineraries           Itinerary[]
  ratings               CompanyRating[]
}

model CompanyRating {
  id          String   @id @default(uuid()) @db.Uuid
  rating      Int      // Rating value from 1-10
  comment     String?  @db.VarChar(1000)
  created_at  DateTime @default(now())
  updated_at  DateTime @updatedAt
  
  // Relations
  user_id     String   @db.Uuid
  company_id  String   @db.Uuid
  user        User     @relation(fields: [user_id], references: [id], onDelete: Cascade)
  company     Company  @relation(fields: [company_id], references: [id], onDelete: Cascade)
  
  // One rating per user per company
  @@unique([user_id, company_id])
  @@index([company_id])
  @@index([user_id])
}

model Itinerary {
  // Basic Information
  id                      String              @id @default(uuid()) @db.Uuid
  title                   String              @db.VarChar(200)
  activity                String?             @db.VarChar(255)
  description             String?             @db.VarChar(3000)
  location                String?             @db.VarChar(255)
  date                    DateTime            @db.Date
  
  // Duration & Scheduling
  duration_days           Int?                // Number of days
  duration_hours          Int?                // Total hours if less than a day
  start_time              String?             @db.VarChar(20)
  end_time                String?             @db.VarChar(20)
  is_multi_day            Boolean             @default(false)
  schedule_details        String?             @db.VarChar(3000)
  
  // Capacity & Booking Policies
  min_participants        Int?
  max_participants        Int?
  available_slots         Int?
  allows_individuals      Boolean             @default(true)
  allows_groups           Boolean             @default(true)
  group_discount_percent  Float?
  group_min_size          Int?
  booking_deadline        DateTime?
  
  // Inclusions & Exclusions
  inclusions              Json?               // Array of included items
  exclusions              Json?               // Array of excluded items
  provided_equipment      Json?               // Array of equipment provided
  required_items          Json?               // Array of items to bring
  
  // Food & Meals
  meals_included          Boolean             @default(false)
  meal_types              Json?               // ["breakfast", "lunch", "dinner"]
  food_options            String?             @db.VarChar(500)
  can_buy_food_onsite     Boolean             @default(false)
  can_bring_own_food      Boolean             @default(true)
  dietary_accommodations  String?             @db.VarChar(500)
  
  // Transportation
  transport_included      Boolean             @default(false)
  transport_type          String?             @db.VarChar(100)
  pickup_locations        Json?               // Array of pickup points
  dropoff_locations       Json?               // Array of dropoff points
  allows_own_transport    Boolean             @default(false)
  parking_available       Boolean             @default(false)
  transport_notes         String?             @db.VarChar(1000)
  
  // Meeting & Location Details
  meeting_point           String?             @db.VarChar(500)
  meeting_point_lat       Float?
  meeting_point_lng       Float?
  end_point               String?             @db.VarChar(500)
  end_point_lat           Float?
  end_point_lng           Float?
  location_details        String?             @db.VarChar(1000)
  
  // Difficulty & Requirements
  difficulty_level        String?             @db.VarChar(50)
  fitness_level_required  String?             @db.VarChar(100)
  min_age                 Int?
  max_age                 Int?
  age_restrictions_notes  String?             @db.VarChar(500)
  accessibility_info      String?             @db.VarChar(1000)
  
  // Pricing & Payment
  price                   Float
  price_per_person        Float?
  price_per_group         Float?
  deposit_required        Float?
  deposit_percentage      Float?
  payment_methods         Json?               // ["cash", "card", "mobile_money"]
  currency                String              @default("RWF") @db.VarChar(10)
  refund_policy           String?             @db.VarChar(1000)
  cancellation_policy     String?             @db.VarChar(1000)
  
  // Safety & Insurance
  insurance_included      Boolean             @default(false)
  insurance_details       String?             @db.VarChar(1000)
  safety_measures         Json?               // Array of safety protocols
  emergency_procedures    String?             @db.VarChar(1000)
  medical_requirements    String?             @db.VarChar(500)
  
  // Additional Information
  languages_offered       Json?               // Languages guides speak
  guide_info              String?             @db.VarChar(500)
  weather_dependency      Boolean             @default(false)
  weather_notes           String?             @db.VarChar(500)
  what_to_wear            String?             @db.VarChar(500)
  additional_notes        String?             @db.VarChar(2000)
  terms_and_conditions    String?             @db.VarChar(3000)
  
  // Status & Visibility
  status                  String              @default("draft") @db.VarChar(20)
  is_featured             Boolean             @default(false)
  is_active               Boolean             @default(true)
  tags                    Json?               // ["adventure", "family-friendly"]
  category                String?             @db.VarChar(100)
  
  // Rating Statistics (cached from ItineraryRating)
  average_rating          Float?
  total_ratings           Int                 @default(0)
  
  // Timestamps
  created_at              DateTime            @default(now())
  updated_at              DateTime            @updatedAt
  published_at            DateTime?
  last_booking_date       DateTime?
  
  // Relations
  company_id              String              @db.Uuid
  company                 Company             @relation(fields: [company_id], references: [id])
  bookings                Booking[]
  items                   BookingItem[]
  images                  ItineraryImage[]
  videos                  ItineraryVideo[]
  ratings                 ItineraryRating[]
}

model ItineraryImage {
  id           String    @id @default(uuid()) @db.Uuid
  itinerary_id String    @db.Uuid
  image_path   String?   @db.VarChar(255)
  image_url    String    @db.VarChar(500)
  public_id    String    @db.VarChar(255)
  order        Int       @default(0)
  created_at   DateTime  @default(now())
  itinerary    Itinerary @relation(fields: [itinerary_id], references: [id], onDelete: Cascade)
}

model ItineraryVideo {
  id           String    @id @default(uuid()) @db.Uuid
  itinerary_id String    @db.Uuid
  video_url    String    @db.VarChar(500)
  public_id    String    @db.VarChar(255)
  thumbnail_url String?  @db.VarChar(500)
  duration     Int?      // Duration in seconds
  order        Int       @default(0)
  created_at   DateTime  @default(now())
  itinerary    Itinerary @relation(fields: [itinerary_id], references: [id], onDelete: Cascade)
}

model ItineraryRating {
  id                  String    @id @default(uuid()) @db.Uuid
  
  // Single rating (1-10 scale to match company ratings)
  rating              Int       // 1-10
  
  // Text feedback
  title               String?   @db.VarChar(200)
  comment             String?   @db.VarChar(2000)
  
  // Boolean feedback flags
  good_value          Boolean?  // Worth the money?
  good_guide          Boolean?  // Guide quality
  well_organized      Boolean?  // Organization
  safe                Boolean?  // Safety
  would_recommend     Boolean?  // Recommend to others?
  
  // Verification
  verified_booking    Boolean   @default(false)
  
  // Timestamps
  created_at          DateTime  @default(now())
  updated_at          DateTime  @updatedAt
  
  // Relations
  user_id             String    @db.Uuid
  itinerary_id        String    @db.Uuid
  booking_id          String?   @db.Uuid
  
  user                User      @relation(fields: [user_id], references: [id], onDelete: Cascade)
  itinerary           Itinerary @relation(fields: [itinerary_id], references: [id], onDelete: Cascade)
  
  // One rating per user per itinerary
  @@unique([user_id, itinerary_id])
  @@index([itinerary_id])
  @@index([user_id])
}

model Role {
  id            String @id @default(uuid()) @db.Uuid
  user_id       String @db.Uuid
  access_level  String @db.VarChar(50)
  access_status String @db.VarChar(20)
  user          User   @relation(fields: [user_id], references: [id])

  @@unique([user_id, access_level])
}

model User {
  name             String            @db.VarChar(255)
  email            String            @unique @db.VarChar(255)
  phone_number     String?           @db.VarChar(50)
  password         String            @db.VarChar(255)
  id               String            @id @default(uuid()) @db.Uuid
  bookings         Booking[]
  companies        Company[]
  roles            Role[]
  companyRatings   CompanyRating[]
  itineraryRatings ItineraryRating[]
}
